# algolabra2024

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: main.yml
documentation/: implementation.md  instructions.md  specification.md  testing.md
documentation/weeklyreports/: week1.md  week2.md  week3.md  week5.md
rsa/src/utilities/: keygen.py  lcm.py  millerrabin.py  modexp.py  primegenerator.py  sieve.py
src/: main.py
src/tests/: extended_gcd_test.py  gcd_test.py  keygen_test.py  lcm_test.py  millerrabin_test.py  primegenerator_test.py  rsa_test.py  sieve_test.py
src/utilities/: extended_gcd.py  gcd.py  keygen.py  lcm.py  millerrabin.py  primegenerator.py  rsa.py  sieve.py
