[tool.poetry]
name = "algolabra2024"
version = "0.1.0"
description = ""
authors = ["Juho Lukka <juholukka00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"
pylint = "^3.1.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest = "^8.1.1"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
